tests/auth_to_customer.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-customer
  app: fintech-app
  version: v1
spec:
  hosts:
    - service-customer
  http:
  - route:
    - destination:
        host: service-auth
        subset: v1
      weight: 100
