tests/chaos_delay_7s.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-auth-v1
  app: fintech-app
  version: v1
spec:
  hosts:
  - service-auth-v1
  http:
  - fault:
      delay:
        fixedDelay: 7s
        percentage:
          value: 100
    route:
    - destination:
        host: service-auth-v1
        subset: v1
      weight: 100
  - route:
    - destination:
        host: service-auth-v1
        subset: v1
