tests/delay_2s.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-auth-deployment
spec:
  host: service-auth-deployment
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-auth-deployment
spec:
  hosts:
  - service-auth-deployment
  http:
  - fault:
      delay:
        fixedDelay: 7s
        percentage:
          value: 100
    route:
    - destination:
        host: service-auth-deployment
        subset: v1
      weight: 100
  - route:
    - destination:
        host: service-auth-deployment
        subset: v1
