tests/destination_rules_all.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-auth
  app: fintech-app
  version: v1
spec:
  host: service-auth
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-customer
  app: fintech-app
  version: v1
spec:
  host: service-customer
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-payments
  app: fintech-app
  version: v1
spec:
  host: service-payments
  subsets:
  - name: v1
    labels:
      version: v1
