tests/traffic_auth_v1_to_v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-auth-v1
  app: fintech-app
  version: v1
spec:
  hosts:
    - service-auth-v1
  http:
  - route:
    - destination:
        host: service-auth-v2
        subset: v2
      weight: 100
