tests/traffic_auth_v2_50.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-auth-v1
  app: fintech-app
  version: v1
spec:
  hosts:
  - service-auth-v1
  http:
  - route:
    - destination:
        host: service-auth-v1
        subset: v1
      weight: 50
    - destination:
        host: service-auth-v2
        subset: v2
      weight: 50
